<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
android:background="@color/colorwhite"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="19dp"
                android:layout_marginTop="48dp"
                android:layout_toStartOf="@+id/combined"
                android:padding="5dp"
                android:src="@drawable/shape" />

            <ImageView
                android:id="@+id/combined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="48dp"
                android:padding="5dp"
                android:src="@drawable/combinedshape" />

            <TextView
                android:id="@+id/txtPlayername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="49dp"
                android:fontFamily="@font/futuramedium"
                android:text="@string/playername"
                android:textColor="#9578FF"
                android:textSize="14dp"


                />

            <TextView
                android:id="@+id/topartist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPlayername"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/futuraboldfont"
                android:text="@string/topartist"
                android:textColor="#C6C6C6"
                android:textSize="@dimen/_26sdp" />

            <TextView
                android:id="@+id/txtseeall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/topartist"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="-15dp"
                android:background="@drawable/seeall_bg"
                android:fontFamily="@font/futuraboldfont"
                android:gravity="center"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/seeall"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/topartistinyourlibrary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtseeall"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@font/futuramedium"
                android:text="@string/topartistinyourlibrary"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/topalbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recyclerviewtopartists"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/futuraboldfont"
                android:text="@string/topalbum"
                android:textColor="#C6C6C6"
                android:textSize="@dimen/_26sdp" />

            <TextView
                android:id="@+id/txtAlbumseeall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/topalbum"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="-15dp"
                android:background="@drawable/seeall_bg"
                android:fontFamily="@font/futuraboldfont"
                android:gravity="center"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/seeall"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/topalbuminyourlibrary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAlbumseeall"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@font/futuramedium"
                android:text="@string/topalbumsplayed"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/latestadded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recyclerviewtopalbums"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/futuraboldfont"
                android:text="@string/latestadded"
                android:textColor="#C6C6C6"
                android:textSize="@dimen/_26sdp" />

            <TextView
                android:id="@+id/txtLatestaddedseeall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/latestadded"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="-15dp"
                android:background="@drawable/seeall_bg"
                android:fontFamily="@font/futuraboldfont"
                android:gravity="center"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/seeall"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/latestaddedtracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtLatestaddedseeall"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@font/futuramedium"
                android:text="@string/latesttracks"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/_14sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewtopartists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topartistinyourlibrary"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewtopalbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topalbuminyourlibrary"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewlatestadds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latestaddedtracks"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:layout_marginBottom="@dimen/_105sdp"
             />

            <!--
                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                app:cardElevation="@dimen/_25sdp"
                                android:background="@color/colorblack"
                               >-->
            <!--   <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_70sdp"
                   android:layout_alignParentBottom="true"
                   android:background="@drawable/curvenew"
                   android:orientation="vertical">

               </LinearLayout>-->


            <!--   </android.support.v7.widget.CardView>-->

            <include
                android:id="@+id/bottom"
                layout="@layout/bottomtoolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"

               />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="118dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/sidemenu_bg"
        android:fitsSystemWindows="false"

        app:itemTextColor="@color/colorblack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llcutter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_172sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgcutter"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"


                    android:src="@drawable/mpcutter" />

                <TextView
                    style="@style/mp3Cutter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/mp3cutter" />


            </LinearLayout>

            <LinearLayout

                android:id="@+id/llAddtoplaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgaddtoplaysit"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"


                    android:src="@drawable/addtoplaylist" />

                <TextView
                    style="@style/mp3Cutter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/addtoplaylist" />


            </LinearLayout>


            <LinearLayout

                android:id="@+id/llbassbooster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgbooster"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"


                    android:src="@drawable/bassbooster" />

                <TextView
                    style="@style/mp3Cutter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="Bass Booster" />


            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
