<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:layout_marginStart="@dimen/_30sdp"
    android:background="@drawable/bg_bassbooster">

    <ImageView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtequaliser"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_toEndOf="@+id/txtreverb"
        android:src="@drawable/plus" />

    <RelativeLayout
        android:id="@+id/rlsecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bassbooster"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_toEndOf="@+id/rlfirst">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:background="@drawable/whitecircle" />

        <TextView
            android:id="@+id/txtsecondtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/futuramedium"
            android:text="3rd surround"
            android:textSize="@dimen/_14sdp"

            />

        <TextView
            android:id="@+id/tvtwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="75%"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/circularProgressbartw"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_below="@+id/txtsecondtext"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_25sdp"
            app:cs_circle_color="#747474"
            app:cs_circle_stroke_width="4dp"
            app:cs_circle_style="round"
            app:cs_end_angle="100"
            app:cs_maintain_equal_circle="true"
            app:cs_negative_enabled="true"
            app:cs_pointer_color="#785CE3"
            app:cs_pointer_halo_width="@dimen/_2sdp"
            app:cs_pointer_stroke_width="20dp"
            app:cs_progress="140"
            app:cs_start_angle="100" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bassbooster">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:background="@drawable/whitecircle" />

        <TextView
            android:id="@+id/txtfirsttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/futuramedium"
            android:text="Bass Boost"
            android:textSize="@dimen/_14sdp"

            />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="60%"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/circularProgressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_below="@+id/txtfirsttext"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"

            app:cs_circle_color="#747474"
            app:cs_circle_stroke_width="4dp"
            app:cs_circle_style="round"
            app:cs_end_angle="100"
            app:cs_maintain_equal_circle="true"
            app:cs_negative_enabled="true"
            app:cs_pointer_color="#785CE3"
            app:cs_pointer_halo_width="@dimen/_2sdp"
            app:cs_pointer_stroke_width="20dp"
            app:cs_progress="160"
            app:cs_start_angle="100" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtequaliser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlfirst"
        android:layout_marginStart="@dimen/_20sdp"
        android:fontFamily="@font/futuraboldfont"
        android:text="@string/equaliser"
        android:textColor="#C6C6C6"
        android:textSize="@dimen/_26sdp" />

    <TextView
        android:id="@+id/txtreverb"
        android:layout_width="@dimen/_205sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtequaliser"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_equaliser"
        android:drawableRight="@drawable/down"
        android:fontFamily="@font/futurabookfont"
        android:padding="@dimen/_10sdp"
        android:text="@string/reverb"
        android:textColor="@color/colorblack"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/bassbooster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futuraboldfont"
        android:padding="@dimen/_20sdp"
        android:text="@string/bassboosternew"
        android:textColor="#C6C6C6"
        android:textSize="@dimen/_26sdp" />

    <include layout="@layout/activity_seekbar"
        android:layout_below="@+id/txtreverb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>